--- a/debian-12-toolbox/Dockerfile
+++ b/debian-12-toolbox/Dockerfile
@@ -3,7 +3,12 @@ FROM debian:12
 LABEL org.opencontainers.image.source=https://github.com/brandonp42/containers
 LABEL org.opencontainers.image.description="Debian 12 toolbox container"
 
-RUN export DEBIAN_FRONTEND=noninteractive \
+RUN \
+    --mount=type=cache,target=/var/cache/apt \
+    --mount=type=cache,target=/var/lib/apt/lists \
+    rm -f /etc/apt/apt.conf.d/docker-clean \
+    && echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache \
+    && export DEBIAN_FRONTEND=noninteractive \
     && apt-get update \
     && apt-get install -y --no-install-recommends \
                apt-utils aptitude build-essential ca-certificates curl \
