--- a/debian-12-slim-toolbox/Dockerfile
+++ b/debian-12-slim-toolbox/Dockerfile
@@ -3,12 +3,13 @@ FROM debian:12-slim
 LABEL org.opencontainers.image.source=https://github.com/brandonp42/containers
 LABEL org.opencontainers.image.description="Debian 12 toolbox container"
 
+RUN rm -f /etc/apt/apt.conf.d/docker-clean \
+    && echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache
+
 RUN \
     --mount=type=cache,target=/var/cache/apt \
     --mount=type=cache,target=/var/lib/apt/lists \
-    rm -f /etc/apt/apt.conf.d/docker-clean \
-    && echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache \
-    && export DEBIAN_FRONTEND=noninteractive \
+    export DEBIAN_FRONTEND=noninteractive \
     && apt-get update \
     && apt-get install -y --no-install-recommends \
                apt-utils build-essential ca-certificates curl dumb-init git \
