--- a/debian-12-toolbox/Dockerfile
+++ b/debian-12-toolbox/Dockerfile
@@ -3,17 +3,23 @@ FROM debian:12
 LABEL org.opencontainers.image.source=https://github.com/brandonp42/containers
 LABEL org.opencontainers.image.description="Debian 12 toolbox container"
 
-RUN \
-    --mount=type=cache,target=/var/cache/apt \
+RUN rm -f /etc/apt/apt.conf.d/docker-clean \
+    && echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache
+
+RUN --mount=type=cache,target=/var/cache/apt \
     --mount=type=cache,target=/var/lib/apt/lists \
-    rm -f /etc/apt/apt.conf.d/docker-clean \
-    && echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache \
-    && export DEBIAN_FRONTEND=noninteractive \
+    export DEBIAN_FRONTEND=noninteractive \
     && apt-get update \
     && apt-get install -y --no-install-recommends \
-               apt-utils aptitude build-essential ca-certificates curl \
-               dumb-init git gpg httpie iputils-ping jq less net-tools nmap \
-               postgresql-client procps python3 sudo unzip vim wget
+               apt-utils build-essential ca-certificates curl dumb-init git \
+               gpg iputils-ping jq less net-tools nmap procps sudo unzip vim
+
+RUN --mount=type=cache,target=/var/cache/apt \
+    --mount=type=cache,target=/var/lib/apt/lists \
+    export DEBIAN_FRONTEND=noninteractive \
+    && apt-get update \
+    && apt-get install -y --no-install-recommends \
+               aptitude httpie postgresql-client wget
 
 RUN  set -ex; \
      \
