--- a/.github/workflows/container-images.yml
+++ b/.github/workflows/container-images.yml
@@ -1,4 +1,4 @@
-name: Build and publish container devfile-bdi-ubi9
+name: Build and publish container debian-12-slim-toolbox
 
 on:
   release:
@@ -7,11 +7,20 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_PREFIX: ${{ github.repository }}
-  IMAGE_NAME: devfile-bdi-ubi9
 
 jobs:
   build-and-push-image:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        container:
+          [
+            "debian-12-toolbox",
+            "debian-12-webdev",
+            "devfile-bdi-ubi9",
+            "universal-ubi9"
+          ]
+
+    runs-on: self-hosted
     permissions:
       contents: read
       packages: write
@@ -19,6 +28,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
@@ -31,7 +43,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}/${{ matrix.container }}
           tags: |
             type=ref,event=tag
             type=sha
@@ -39,7 +51,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
-          context: ${{ env.IMAGE_NAME }}
+          context: ${{ matrix.container }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
